<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <!-- ===================================================== -->
    <!-- INFORMAÇÕES DO PROJETO -->
    <!-- ===================================================== -->

    <modelVersion>4.0.0</modelVersion>

    <!-- SPRING BOOT PARENT -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <!-- DADOS DO PROJETO -->
    <groupId>com.example</groupId>
    <artifactId>ReservaBiblioteca</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>ReservaBiblioteca</name>

    <!-- ===================================================== -->
    <!-- PROPRIEDADES -->
    <!-- ===================================================== -->

    <properties>

        <!-- JAVA -->
        <java.version>17</java.version>

        <!-- MAPSTRUCT -->
        <mapstruct.version>1.5.5.Final</mapstruct.version>

        <!-- LOMBOK -->
        <lombok.version>1.18.38</lombok.version>

    </properties>

    <!-- ===================================================== -->
    <!-- DEPENDÊNCIAS -->
    <!-- ===================================================== -->

    <dependencies>

        <!-- ================================================= -->
        <!-- SPRING -->
        <!-- ================================================= -->

        <!-- CORE -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <!-- WEB / API REST -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- JPA / HIBERNATE -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- SECURITY -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- VALIDAÇÃO -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- ================================================= -->
        <!-- JWT -->
        <!-- ================================================= -->

        <!-- JWT API -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.11.5</version>
        </dependency>

        <!-- JWT IMPLEMENTAÇÃO -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>

        <!-- JWT JACKSON -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>

        <!-- ================================================= -->
        <!-- BANCO DE DADOS -->
        <!-- ================================================= -->

        <!-- MYSQL -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- H2 -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- POSTGRES -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- ================================================= -->
        <!-- DOCUMENTAÇÃO -->
        <!-- ================================================= -->

        <!-- SWAGGER / OPENAPI -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.5.0</version>
        </dependency>

        <!-- ================================================= -->
        <!-- MAPSTRUCT -->
        <!-- ================================================= -->

        <!-- MAPSTRUCT -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>

        <!-- ================================================= -->
        <!-- LOMBOK -->
        <!-- ================================================= -->

        <!-- LOMBOK -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- ================================================= -->
        <!-- TESTES -->
        <!-- ================================================= -->

        <!-- TESTES SPRING -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- ===================================================== -->
    <!-- BUILD -->
    <!-- ===================================================== -->

    <build>

        <plugins>

            <!-- ============================================= -->
            <!-- SPRING BOOT -->
            <!-- ============================================= -->

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <!-- ============================================= -->
            <!-- MAVEN COMPILER -->
            <!-- ============================================= -->

            <plugin>

                <groupId>org.apache.maven.plugins</groupId>

                <artifactId>maven-compiler-plugin</artifactId>

                <version>3.11.0</version>

                <configuration>

                    <!-- JAVA -->
                    <source>${java.version}</source>
                    <target>${java.version}</target>

                    <!-- PROCESSADORES -->
                    <annotationProcessorPaths>

                        <!-- MAPSTRUCT -->
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>

                        <!-- LOMBOK -->
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>

                    </annotationProcessorPaths>

                </configuration>

            </plugin>

        </plugins>

    </build>

</project>